// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FilterReach - Snapshots > matches snapshot in uncontrolled mode with defaultSelectedTab 1`] = `
<div
  class="w-full flex-col flex m-0 min-w-0 bg-background p-0 gap-4"
  data-slot="filter-root"
  data-testid="filter-root"
>
  <div
    class="m-0 gap-2 p-0"
    data-slot="filter-header"
    data-testid="filter-header"
    id="radix-normalized"
  >
    <h2
      class="text-2xl font-light text-muted-foreground"
      data-testid="heading-2"
    >
      Posts from
    </h2>
  </div>
  <div
    aria-labelledby="radix-normalized"
    class="relative size-[180px] shrink-0"
    data-cy="filter-reach-radiogroup"
    data-testid="filter-reach-radiogroup"
    role="radiogroup"
  >
    <svg
      aria-hidden="true"
      class="pointer-events-none absolute inset-0 size-full"
      viewBox="0 0 180 180"
    >
      <circle
        class="transition-colors fill-transparent stroke-border"
        cx="90"
        cy="90"
        data-reach-ring="all"
        r="89.5"
      />
      <circle
        class="transition-colors fill-transparent stroke-border"
        cx="90"
        cy="90"
        data-reach-ring="network"
        r="75.5"
      />
      <circle
        class="transition-colors fill-transparent stroke-border"
        cx="90"
        cy="90"
        data-reach-ring="following"
        r="61.5"
      />
      <circle
        class="transition-colors fill-brand/[0.10] stroke-brand"
        cx="90"
        cy="90"
        data-reach-ring="friends"
        r="47.5"
      />
      <circle
        class="transition-colors fill-transparent stroke-border"
        cx="90"
        cy="90"
        data-reach-ring="me"
        r="33.5"
      />
    </svg>
    <button
      aria-checked="false"
      aria-label="Me"
      aria-pressed="false"
      class="absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 cursor-pointer rounded-full bg-transparent p-0 outline-none focus-visible:outline-1 focus-visible:-outline-offset-1 focus-visible:outline-foreground size-[68px] z-60"
      data-reach-option="me"
      data-selected="false"
      data-slot="filter-item"
      data-testid="filter-item"
      role="radio"
      tabindex="-1"
      type="button"
    />
    <button
      aria-checked="true"
      aria-label="Friends"
      aria-pressed="true"
      class="absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 cursor-pointer rounded-full bg-transparent p-0 outline-none focus-visible:outline-1 focus-visible:-outline-offset-1 focus-visible:outline-foreground size-[96px] z-50"
      data-reach-option="friends"
      data-selected="true"
      data-slot="filter-item"
      data-testid="filter-item"
      role="radio"
      tabindex="0"
      type="button"
    />
    <button
      aria-checked="false"
      aria-label="Following"
      aria-pressed="false"
      class="absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 cursor-pointer rounded-full bg-transparent p-0 outline-none focus-visible:outline-1 focus-visible:-outline-offset-1 focus-visible:outline-foreground size-[124px] z-40"
      data-reach-option="following"
      data-selected="false"
      data-slot="filter-item"
      data-testid="filter-item"
      role="radio"
      tabindex="-1"
      type="button"
    />
    <button
      aria-checked="false"
      aria-label="My Network"
      aria-pressed="false"
      class="absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 cursor-pointer rounded-full bg-transparent p-0 outline-none focus-visible:outline-1 focus-visible:-outline-offset-1 focus-visible:outline-foreground size-[152px] z-30"
      data-reach-option="network"
      data-selected="false"
      data-slot="filter-item"
      data-testid="filter-item"
      role="radio"
      tabindex="-1"
      type="button"
    />
    <button
      aria-checked="false"
      aria-label="All"
      aria-pressed="false"
      class="absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 cursor-pointer rounded-full bg-transparent p-0 outline-none focus-visible:outline-1 focus-visible:-outline-offset-1 focus-visible:outline-foreground size-[180px] z-10"
      data-reach-option="all"
      data-selected="false"
      data-slot="filter-item"
      data-testid="filter-item"
      role="radio"
      tabindex="-1"
      type="button"
    />
    <span
      class="text-xs font-medium pointer-events-none absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 leading-4 tracking-[1.2px] uppercase drop-shadow-[0_1px_2px_rgba(0,0,0,0.75)] transition-colors select-none text-brand"
      data-testid="filter-reach-label"
    >
      Friends
    </span>
  </div>
</div>
`;

exports[`FilterReach - Snapshots > matches snapshot with All selected tab 1`] = `
<div
  class="w-full flex-col flex m-0 min-w-0 bg-background p-0 gap-4"
  data-slot="filter-root"
  data-testid="filter-root"
>
  <div
    class="m-0 gap-2 p-0"
    data-slot="filter-header"
    data-testid="filter-header"
    id="radix-normalized"
  >
    <h2
      class="text-2xl font-light text-muted-foreground"
      data-testid="heading-2"
    >
      Posts from
    </h2>
  </div>
  <div
    aria-labelledby="radix-normalized"
    class="relative size-[180px] shrink-0"
    data-cy="filter-reach-radiogroup"
    data-testid="filter-reach-radiogroup"
    role="radiogroup"
  >
    <svg
      aria-hidden="true"
      class="pointer-events-none absolute inset-0 size-full"
      viewBox="0 0 180 180"
    >
      <circle
        class="transition-colors fill-brand/[0.10] stroke-brand"
        cx="90"
        cy="90"
        data-reach-ring="all"
        r="89.5"
      />
      <circle
        class="transition-colors fill-transparent stroke-border"
        cx="90"
        cy="90"
        data-reach-ring="network"
        r="75.5"
      />
      <circle
        class="transition-colors fill-transparent stroke-border"
        cx="90"
        cy="90"
        data-reach-ring="following"
        r="61.5"
      />
      <circle
        class="transition-colors fill-transparent stroke-border"
        cx="90"
        cy="90"
        data-reach-ring="friends"
        r="47.5"
      />
      <circle
        class="transition-colors fill-transparent stroke-border"
        cx="90"
        cy="90"
        data-reach-ring="me"
        r="33.5"
      />
    </svg>
    <button
      aria-checked="false"
      aria-label="Me"
      aria-pressed="false"
      class="absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 cursor-pointer rounded-full bg-transparent p-0 outline-none focus-visible:outline-1 focus-visible:-outline-offset-1 focus-visible:outline-foreground size-[68px] z-60"
      data-reach-option="me"
      data-selected="false"
      data-slot="filter-item"
      data-testid="filter-item"
      role="radio"
      tabindex="-1"
      type="button"
    />
    <button
      aria-checked="false"
      aria-label="Friends"
      aria-pressed="false"
      class="absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 cursor-pointer rounded-full bg-transparent p-0 outline-none focus-visible:outline-1 focus-visible:-outline-offset-1 focus-visible:outline-foreground size-[96px] z-50"
      data-reach-option="friends"
      data-selected="false"
      data-slot="filter-item"
      data-testid="filter-item"
      role="radio"
      tabindex="-1"
      type="button"
    />
    <button
      aria-checked="false"
      aria-label="Following"
      aria-pressed="false"
      class="absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 cursor-pointer rounded-full bg-transparent p-0 outline-none focus-visible:outline-1 focus-visible:-outline-offset-1 focus-visible:outline-foreground size-[124px] z-40"
      data-reach-option="following"
      data-selected="false"
      data-slot="filter-item"
      data-testid="filter-item"
      role="radio"
      tabindex="-1"
      type="button"
    />
    <button
      aria-checked="false"
      aria-label="My Network"
      aria-pressed="false"
      class="absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 cursor-pointer rounded-full bg-transparent p-0 outline-none focus-visible:outline-1 focus-visible:-outline-offset-1 focus-visible:outline-foreground size-[152px] z-30"
      data-reach-option="network"
      data-selected="false"
      data-slot="filter-item"
      data-testid="filter-item"
      role="radio"
      tabindex="-1"
      type="button"
    />
    <button
      aria-checked="true"
      aria-label="All"
      aria-pressed="true"
      class="absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 cursor-pointer rounded-full bg-transparent p-0 outline-none focus-visible:outline-1 focus-visible:-outline-offset-1 focus-visible:outline-foreground size-[180px] z-10"
      data-reach-option="all"
      data-selected="true"
      data-slot="filter-item"
      data-testid="filter-item"
      role="radio"
      tabindex="0"
      type="button"
    />
    <span
      class="text-xs font-medium pointer-events-none absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 leading-4 tracking-[1.2px] uppercase drop-shadow-[0_1px_2px_rgba(0,0,0,0.75)] transition-colors select-none text-brand"
      data-testid="filter-reach-label"
    >
      All
    </span>
  </div>
</div>
`;

exports[`FilterReach - Snapshots > matches snapshot with Following selected 1`] = `
<div
  class="w-full flex-col flex m-0 min-w-0 bg-background p-0 gap-4"
  data-slot="filter-root"
  data-testid="filter-root"
>
  <div
    class="m-0 gap-2 p-0"
    data-slot="filter-header"
    data-testid="filter-header"
    id="radix-normalized"
  >
    <h2
      class="text-2xl font-light text-muted-foreground"
      data-testid="heading-2"
    >
      Posts from
    </h2>
  </div>
  <div
    aria-labelledby="radix-normalized"
    class="relative size-[180px] shrink-0"
    data-cy="filter-reach-radiogroup"
    data-testid="filter-reach-radiogroup"
    role="radiogroup"
  >
    <svg
      aria-hidden="true"
      class="pointer-events-none absolute inset-0 size-full"
      viewBox="0 0 180 180"
    >
      <circle
        class="transition-colors fill-transparent stroke-border"
        cx="90"
        cy="90"
        data-reach-ring="all"
        r="89.5"
      />
      <circle
        class="transition-colors fill-transparent stroke-border"
        cx="90"
        cy="90"
        data-reach-ring="network"
        r="75.5"
      />
      <circle
        class="transition-colors fill-brand/[0.10] stroke-brand"
        cx="90"
        cy="90"
        data-reach-ring="following"
        r="61.5"
      />
      <circle
        class="transition-colors fill-transparent stroke-border"
        cx="90"
        cy="90"
        data-reach-ring="friends"
        r="47.5"
      />
      <circle
        class="transition-colors fill-transparent stroke-border"
        cx="90"
        cy="90"
        data-reach-ring="me"
        r="33.5"
      />
    </svg>
    <button
      aria-checked="false"
      aria-label="Me"
      aria-pressed="false"
      class="absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 cursor-pointer rounded-full bg-transparent p-0 outline-none focus-visible:outline-1 focus-visible:-outline-offset-1 focus-visible:outline-foreground size-[68px] z-60"
      data-reach-option="me"
      data-selected="false"
      data-slot="filter-item"
      data-testid="filter-item"
      role="radio"
      tabindex="-1"
      type="button"
    />
    <button
      aria-checked="false"
      aria-label="Friends"
      aria-pressed="false"
      class="absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 cursor-pointer rounded-full bg-transparent p-0 outline-none focus-visible:outline-1 focus-visible:-outline-offset-1 focus-visible:outline-foreground size-[96px] z-50"
      data-reach-option="friends"
      data-selected="false"
      data-slot="filter-item"
      data-testid="filter-item"
      role="radio"
      tabindex="-1"
      type="button"
    />
    <button
      aria-checked="true"
      aria-label="Following"
      aria-pressed="true"
      class="absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 cursor-pointer rounded-full bg-transparent p-0 outline-none focus-visible:outline-1 focus-visible:-outline-offset-1 focus-visible:outline-foreground size-[124px] z-40"
      data-reach-option="following"
      data-selected="true"
      data-slot="filter-item"
      data-testid="filter-item"
      role="radio"
      tabindex="0"
      type="button"
    />
    <button
      aria-checked="false"
      aria-label="My Network"
      aria-pressed="false"
      class="absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 cursor-pointer rounded-full bg-transparent p-0 outline-none focus-visible:outline-1 focus-visible:-outline-offset-1 focus-visible:outline-foreground size-[152px] z-30"
      data-reach-option="network"
      data-selected="false"
      data-slot="filter-item"
      data-testid="filter-item"
      role="radio"
      tabindex="-1"
      type="button"
    />
    <button
      aria-checked="false"
      aria-label="All"
      aria-pressed="false"
      class="absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 cursor-pointer rounded-full bg-transparent p-0 outline-none focus-visible:outline-1 focus-visible:-outline-offset-1 focus-visible:outline-foreground size-[180px] z-10"
      data-reach-option="all"
      data-selected="false"
      data-slot="filter-item"
      data-testid="filter-item"
      role="radio"
      tabindex="-1"
      type="button"
    />
    <span
      class="text-xs font-medium pointer-events-none absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 leading-4 tracking-[1.2px] uppercase drop-shadow-[0_1px_2px_rgba(0,0,0,0.75)] transition-colors select-none text-brand"
      data-testid="filter-reach-label"
    >
      Following
    </span>
  </div>
</div>
`;

exports[`FilterReach - Snapshots > matches snapshot with Friends selected 1`] = `
<div
  class="w-full flex-col flex m-0 min-w-0 bg-background p-0 gap-4"
  data-slot="filter-root"
  data-testid="filter-root"
>
  <div
    class="m-0 gap-2 p-0"
    data-slot="filter-header"
    data-testid="filter-header"
    id="radix-normalized"
  >
    <h2
      class="text-2xl font-light text-muted-foreground"
      data-testid="heading-2"
    >
      Posts from
    </h2>
  </div>
  <div
    aria-labelledby="radix-normalized"
    class="relative size-[180px] shrink-0"
    data-cy="filter-reach-radiogroup"
    data-testid="filter-reach-radiogroup"
    role="radiogroup"
  >
    <svg
      aria-hidden="true"
      class="pointer-events-none absolute inset-0 size-full"
      viewBox="0 0 180 180"
    >
      <circle
        class="transition-colors fill-transparent stroke-border"
        cx="90"
        cy="90"
        data-reach-ring="all"
        r="89.5"
      />
      <circle
        class="transition-colors fill-transparent stroke-border"
        cx="90"
        cy="90"
        data-reach-ring="network"
        r="75.5"
      />
      <circle
        class="transition-colors fill-transparent stroke-border"
        cx="90"
        cy="90"
        data-reach-ring="following"
        r="61.5"
      />
      <circle
        class="transition-colors fill-brand/[0.10] stroke-brand"
        cx="90"
        cy="90"
        data-reach-ring="friends"
        r="47.5"
      />
      <circle
        class="transition-colors fill-transparent stroke-border"
        cx="90"
        cy="90"
        data-reach-ring="me"
        r="33.5"
      />
    </svg>
    <button
      aria-checked="false"
      aria-label="Me"
      aria-pressed="false"
      class="absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 cursor-pointer rounded-full bg-transparent p-0 outline-none focus-visible:outline-1 focus-visible:-outline-offset-1 focus-visible:outline-foreground size-[68px] z-60"
      data-reach-option="me"
      data-selected="false"
      data-slot="filter-item"
      data-testid="filter-item"
      role="radio"
      tabindex="-1"
      type="button"
    />
    <button
      aria-checked="true"
      aria-label="Friends"
      aria-pressed="true"
      class="absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 cursor-pointer rounded-full bg-transparent p-0 outline-none focus-visible:outline-1 focus-visible:-outline-offset-1 focus-visible:outline-foreground size-[96px] z-50"
      data-reach-option="friends"
      data-selected="true"
      data-slot="filter-item"
      data-testid="filter-item"
      role="radio"
      tabindex="0"
      type="button"
    />
    <button
      aria-checked="false"
      aria-label="Following"
      aria-pressed="false"
      class="absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 cursor-pointer rounded-full bg-transparent p-0 outline-none focus-visible:outline-1 focus-visible:-outline-offset-1 focus-visible:outline-foreground size-[124px] z-40"
      data-reach-option="following"
      data-selected="false"
      data-slot="filter-item"
      data-testid="filter-item"
      role="radio"
      tabindex="-1"
      type="button"
    />
    <button
      aria-checked="false"
      aria-label="My Network"
      aria-pressed="false"
      class="absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 cursor-pointer rounded-full bg-transparent p-0 outline-none focus-visible:outline-1 focus-visible:-outline-offset-1 focus-visible:outline-foreground size-[152px] z-30"
      data-reach-option="network"
      data-selected="false"
      data-slot="filter-item"
      data-testid="filter-item"
      role="radio"
      tabindex="-1"
      type="button"
    />
    <button
      aria-checked="false"
      aria-label="All"
      aria-pressed="false"
      class="absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 cursor-pointer rounded-full bg-transparent p-0 outline-none focus-visible:outline-1 focus-visible:-outline-offset-1 focus-visible:outline-foreground size-[180px] z-10"
      data-reach-option="all"
      data-selected="false"
      data-slot="filter-item"
      data-testid="filter-item"
      role="radio"
      tabindex="-1"
      type="button"
    />
    <span
      class="text-xs font-medium pointer-events-none absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 leading-4 tracking-[1.2px] uppercase drop-shadow-[0_1px_2px_rgba(0,0,0,0.75)] transition-colors select-none text-brand"
      data-testid="filter-reach-label"
    >
      Friends
    </span>
  </div>
</div>
`;

exports[`FilterReach - Snapshots > matches snapshot with default props (All selected) 1`] = `
<div
  class="w-full flex-col flex m-0 min-w-0 bg-background p-0 gap-4"
  data-slot="filter-root"
  data-testid="filter-root"
>
  <div
    class="m-0 gap-2 p-0"
    data-slot="filter-header"
    data-testid="filter-header"
    id="radix-normalized"
  >
    <h2
      class="text-2xl font-light text-muted-foreground"
      data-testid="heading-2"
    >
      Posts from
    </h2>
  </div>
  <div
    aria-labelledby="radix-normalized"
    class="relative size-[180px] shrink-0"
    data-cy="filter-reach-radiogroup"
    data-testid="filter-reach-radiogroup"
    role="radiogroup"
  >
    <svg
      aria-hidden="true"
      class="pointer-events-none absolute inset-0 size-full"
      viewBox="0 0 180 180"
    >
      <circle
        class="transition-colors fill-brand/[0.10] stroke-brand"
        cx="90"
        cy="90"
        data-reach-ring="all"
        r="89.5"
      />
      <circle
        class="transition-colors fill-transparent stroke-border"
        cx="90"
        cy="90"
        data-reach-ring="network"
        r="75.5"
      />
      <circle
        class="transition-colors fill-transparent stroke-border"
        cx="90"
        cy="90"
        data-reach-ring="following"
        r="61.5"
      />
      <circle
        class="transition-colors fill-transparent stroke-border"
        cx="90"
        cy="90"
        data-reach-ring="friends"
        r="47.5"
      />
      <circle
        class="transition-colors fill-transparent stroke-border"
        cx="90"
        cy="90"
        data-reach-ring="me"
        r="33.5"
      />
    </svg>
    <button
      aria-checked="false"
      aria-label="Me"
      aria-pressed="false"
      class="absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 cursor-pointer rounded-full bg-transparent p-0 outline-none focus-visible:outline-1 focus-visible:-outline-offset-1 focus-visible:outline-foreground size-[68px] z-60"
      data-reach-option="me"
      data-selected="false"
      data-slot="filter-item"
      data-testid="filter-item"
      role="radio"
      tabindex="-1"
      type="button"
    />
    <button
      aria-checked="false"
      aria-label="Friends"
      aria-pressed="false"
      class="absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 cursor-pointer rounded-full bg-transparent p-0 outline-none focus-visible:outline-1 focus-visible:-outline-offset-1 focus-visible:outline-foreground size-[96px] z-50"
      data-reach-option="friends"
      data-selected="false"
      data-slot="filter-item"
      data-testid="filter-item"
      role="radio"
      tabindex="-1"
      type="button"
    />
    <button
      aria-checked="false"
      aria-label="Following"
      aria-pressed="false"
      class="absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 cursor-pointer rounded-full bg-transparent p-0 outline-none focus-visible:outline-1 focus-visible:-outline-offset-1 focus-visible:outline-foreground size-[124px] z-40"
      data-reach-option="following"
      data-selected="false"
      data-slot="filter-item"
      data-testid="filter-item"
      role="radio"
      tabindex="-1"
      type="button"
    />
    <button
      aria-checked="false"
      aria-label="My Network"
      aria-pressed="false"
      class="absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 cursor-pointer rounded-full bg-transparent p-0 outline-none focus-visible:outline-1 focus-visible:-outline-offset-1 focus-visible:outline-foreground size-[152px] z-30"
      data-reach-option="network"
      data-selected="false"
      data-slot="filter-item"
      data-testid="filter-item"
      role="radio"
      tabindex="-1"
      type="button"
    />
    <button
      aria-checked="true"
      aria-label="All"
      aria-pressed="true"
      class="absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 cursor-pointer rounded-full bg-transparent p-0 outline-none focus-visible:outline-1 focus-visible:-outline-offset-1 focus-visible:outline-foreground size-[180px] z-10"
      data-reach-option="all"
      data-selected="true"
      data-slot="filter-item"
      data-testid="filter-item"
      role="radio"
      tabindex="0"
      type="button"
    />
    <span
      class="text-xs font-medium pointer-events-none absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 leading-4 tracking-[1.2px] uppercase drop-shadow-[0_1px_2px_rgba(0,0,0,0.75)] transition-colors select-none text-brand"
      data-testid="filter-reach-label"
    >
      All
    </span>
  </div>
</div>
`;

exports[`FilterReach - Snapshots > matches snapshot with disabled state 1`] = `
<div
  class="w-full flex-col flex m-0 min-w-0 bg-background p-0 gap-4"
  data-slot="filter-root"
  data-testid="filter-root"
>
  <div
    class="m-0 gap-2 p-0"
    data-slot="filter-header"
    data-testid="filter-header"
    id="radix-normalized"
  >
    <h2
      class="text-2xl font-light text-muted-foreground"
      data-testid="heading-2"
    >
      Posts from
    </h2>
  </div>
  <div
    aria-labelledby="radix-normalized"
    class="relative size-[180px] shrink-0 opacity-40"
    data-cy="filter-reach-radiogroup"
    data-testid="filter-reach-radiogroup"
    role="radiogroup"
  >
    <svg
      aria-hidden="true"
      class="pointer-events-none absolute inset-0 size-full"
      viewBox="0 0 180 180"
    >
      <circle
        class="transition-colors fill-brand/[0.10] stroke-brand"
        cx="90"
        cy="90"
        data-reach-ring="all"
        r="89.5"
      />
      <circle
        class="transition-colors fill-transparent stroke-border"
        cx="90"
        cy="90"
        data-reach-ring="network"
        r="75.5"
      />
      <circle
        class="transition-colors fill-transparent stroke-border"
        cx="90"
        cy="90"
        data-reach-ring="following"
        r="61.5"
      />
      <circle
        class="transition-colors fill-transparent stroke-border"
        cx="90"
        cy="90"
        data-reach-ring="friends"
        r="47.5"
      />
      <circle
        class="transition-colors fill-transparent stroke-border"
        cx="90"
        cy="90"
        data-reach-ring="me"
        r="33.5"
      />
    </svg>
    <button
      aria-checked="false"
      aria-disabled="true"
      aria-label="Me"
      aria-pressed="false"
      class="absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 rounded-full bg-transparent p-0 outline-none focus-visible:outline-1 focus-visible:-outline-offset-1 focus-visible:outline-foreground size-[68px] z-60 cursor-default"
      data-reach-option="me"
      data-selected="false"
      data-slot="filter-item"
      data-testid="filter-item"
      disabled=""
      role="radio"
      tabindex="-1"
      type="button"
    />
    <button
      aria-checked="false"
      aria-disabled="true"
      aria-label="Friends"
      aria-pressed="false"
      class="absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 rounded-full bg-transparent p-0 outline-none focus-visible:outline-1 focus-visible:-outline-offset-1 focus-visible:outline-foreground size-[96px] z-50 cursor-default"
      data-reach-option="friends"
      data-selected="false"
      data-slot="filter-item"
      data-testid="filter-item"
      disabled=""
      role="radio"
      tabindex="-1"
      type="button"
    />
    <button
      aria-checked="false"
      aria-disabled="true"
      aria-label="Following"
      aria-pressed="false"
      class="absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 rounded-full bg-transparent p-0 outline-none focus-visible:outline-1 focus-visible:-outline-offset-1 focus-visible:outline-foreground size-[124px] z-40 cursor-default"
      data-reach-option="following"
      data-selected="false"
      data-slot="filter-item"
      data-testid="filter-item"
      disabled=""
      role="radio"
      tabindex="-1"
      type="button"
    />
    <button
      aria-checked="false"
      aria-disabled="true"
      aria-label="My Network"
      aria-pressed="false"
      class="absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 rounded-full bg-transparent p-0 outline-none focus-visible:outline-1 focus-visible:-outline-offset-1 focus-visible:outline-foreground size-[152px] z-30 cursor-default"
      data-reach-option="network"
      data-selected="false"
      data-slot="filter-item"
      data-testid="filter-item"
      disabled=""
      role="radio"
      tabindex="-1"
      type="button"
    />
    <button
      aria-checked="true"
      aria-disabled="true"
      aria-label="All"
      aria-pressed="true"
      class="absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 rounded-full bg-transparent p-0 outline-none focus-visible:outline-1 focus-visible:-outline-offset-1 focus-visible:outline-foreground size-[180px] z-10 cursor-default"
      data-reach-option="all"
      data-selected="true"
      data-slot="filter-item"
      data-testid="filter-item"
      disabled=""
      role="radio"
      tabindex="-1"
      type="button"
    />
    <span
      class="text-xs font-medium pointer-events-none absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 leading-4 tracking-[1.2px] uppercase drop-shadow-[0_1px_2px_rgba(0,0,0,0.75)] transition-colors select-none text-brand"
      data-testid="filter-reach-label"
    >
      All
    </span>
  </div>
</div>
`;
